added jni fallback